kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ils-production
  labels:
    name: ils-production
    environment: production
